# ELC4L

./: .gitignore  CMakeLists.txt  ELC4L.def  HyeokStreamMaster.def  LICENSE  README.md  build.bat  build_all.bat  build_mac.sh
ELC4L_JUCE/: CMakeLists.txt  ELC4L.jucer  README.md  build_all.bat  build_macos.sh  build_windows.bat
ELC4L_JUCE/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
ELC4L_JUCE/Source/DSP/: DSPModules.h
ELC4L_JUCE/Source/UI/: BandSection.cpp  BandSection.h  CustomLookAndFeel.cpp  CustomLookAndFeel.h  LimiterSection.cpp  LimiterSection.h  Meters.cpp  Meters.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h
build32/: ALL_BUILD.vcxproj  CMakeCache.txt  ELC4L.sln  ELC4L.vcxproj  ELC4L.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build32/ELC4L.dir/Release/: ELC4L.dll.recipe
build32/ELC4L.dir/Release/ELC4L.tlog/: CL.13320.write.1.tlog  CL.19768.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build32/Release/: ELC4L.exp  ELC4L.lib
build32/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
build32/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build32/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build32/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build64/: ALL_BUILD.vcxproj  CMakeCache.txt  ELC4L.sln  ELC4L.vcxproj  ELC4L.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build64/ELC4L.dir/Release/: ELC4L.dll.recipe
build64/ELC4L.dir/Release/ELC4L.tlog/: CL.15024.write.1.tlog  CL.20524.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build64/Release/: ELC4L.exp  ELC4L.lib
build64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
build64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_x64/: ALL_BUILD.vcxproj  CMakeCache.txt  HyeokStreamMaster.sln  HyeokStreamMaster.vcxproj  HyeokStreamMaster.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_x64/HyeokStreamMaster.dir/Release/: HyeokStreamMaster.dll.recipe
build_x64/HyeokStreamMaster.dir/Release/HyeokStr.56A6DFB3.tlog/: CL.25684.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x64/Release/: HyeokStreamMaster.exp
build_x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_x86/: ALL_BUILD.vcxproj  CMakeCache.txt  HyeokStreamMaster.sln  HyeokStreamMaster.vcxproj  HyeokStreamMaster.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_x86/HyeokStreamMaster.dir/Release/: HyeokStreamMaster.dll.recipe
build_x86/HyeokStreamMaster.dir/Release/HyeokStr.91A3E84B.tlog/: CL.26608.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x86/Release/: HyeokStreamMaster.exp  HyeokStreamMaster.lib
build_x86/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
build_x86/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_x86/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_x86/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
mac/: Info.plist.in
output/ELC4L.vst3/Contents/Resources/: moduleinfo.json
src/: HyeokStreamEditor.cpp  HyeokStreamEditor.h  HyeokStreamMaster.cpp  HyeokStreamMaster.h  vstplugmain.cpp
vst3/: CMakeLists.txt  README.md
vst3/src/: ELC4Lcontroller.cpp  ELC4Lcontroller.h  ELC4Ldsp.h  ELC4Leditor.cpp  ELC4Leditor.h  ELC4Lfactory.cpp  ELC4Lids.h  ELC4Lprocessor.cpp  ELC4Lprocessor.h  version.h
vstsdk/: aeffectx.h  audioeffectx.cpp  audioeffectx.h
vstsdk/pluginterfaces/vst2.x/: aeffect.h
